# MixColorMapping

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_exe.bat
assets/: version_info.txt
samples/: palette.csv  targets_cmyk.csv  targets_hex.csv  targets_lab.csv  targets_rgb.csv
src/: color_io.cpp  color_io.h  main.cpp  match_search.cpp  match_search.h
tests/: run_tests.sh  test_all.py  test_golden.cpp
web/: app.py  start.bat  start.sh
web/static/: index.html
